<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/expensesCard"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    card_view:cardBackgroundColor="#fff6a0"
    card_view:cardCornerRadius="4dp"
    card_view:cardElevation="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvDes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/description"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tvAmt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint = "@string/amount"
            android:textSize="20sp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/delete"
                android:id="@+id/btnDelete"/>

            <ImageView
                android:id="@+id/ExpenseIcon"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_marginLeft="180dp"
                android:src="@drawable/receive"/>
        </LinearLayout>







    </LinearLayout>


</androidx.cardview.widget.CardView>